# opp

./: README.md
KR/: NotWorking.cpp
Lab1/: CMakeLists.txt  SLAE_MPI_1.cpp  SLAE_MPI_2.cpp  SLAE_MPI_CON.cpp  Times.xlsx
Lab2/: CMakeLists.txt  SLAE_OpenMP_1.cpp  SLAE_OpenMP_1_SSE.cpp  SLAE_OpenMP_2.cpp  SLAE_OpenMP_2_SSE.cpp  SLAE_OpenMP_CON_SSE.cpp  Times.xlsx
Lab3/: CMakeLists.txt  MATMUL_MPI.cpp  MATMUL_MPI_SendRecv.cpp  Simple_MATMUL.cpp  Times.xlsx
Lab4/: CMakeLists.txt  JACOBI_MPI.cpp  Times.xlsx
Lab5/: CMakeLists.txt  LOAD_BALANCING_MPI.cpp
Scripts, cmds, profiling/: Xming и запуск профилировщика.txt  Скрипт для MPI программ.txt  Скрипт для OpenMP программ.txt  Скрипт для последовательной программы.txt  Скрипт для профилирования.txt
